week2/day1/websocket/build/log/idf_py_stderr_output_95780
/Users/stanleyarn/Documents/github/school/ComputerSci/main/week2/day1/websocket/main/websocket.c: In function 'send_data_task':
/Users/stanleyarn/Documents/github/school/ComputerSci/main/week2/day1/websocket/main/websocket.c:70:29: error: implicit declaration of function 'httpd_ws_get_fd_state'; did you mean 'httpd_ws_get_fd_info'? [-Werror=implicit-function-declaration]
   70 |                         if (httpd_ws_get_fd_state(hd, i) == HTTPD_WS_CLIENT_WEBSOCKET)
      |                             ^~~~~~~~~~~~~~~~~~~~~
      |                             httpd_ws_get_fd_info
/Users/stanleyarn/Documents/github/school/ComputerSci/main/week2/day1/websocket/main/websocket.c:76:57: warning: passing argument 2 of 'httpd_ws_send_frame' makes pointer from integer without a cast [-Wint-conversion]
   76 |                                 httpd_ws_send_frame(hd, i, &ws_pkt);
      |                                                         ^
      |                                                         |
      |                                                         int
In file included from /Users/stanleyarn/Documents/github/school/ComputerSci/main/week2/day1/websocket/main/websocket.c:24:
/Users/stanleyarn/esp/esp-idf/components/esp_http_server/include/esp_http_server.h:1743:67: note: expected 'httpd_ws_frame_t *' {aka 'struct httpd_ws_frame *'} but argument is of type 'int'
 1743 | esp_err_t httpd_ws_send_frame(httpd_req_t *req, httpd_ws_frame_t *pkt);
      |                                                 ~~~~~~~~~~~~~~~~~~^~~
/Users/stanleyarn/Documents/github/school/ComputerSci/main/week2/day1/websocket/main/websocket.c:76:33: error: too many arguments to function 'httpd_ws_send_frame'
   76 |                                 httpd_ws_send_frame(hd, i, &ws_pkt);
      |                                 ^~~~~~~~~~~~~~~~~~~
/Users/stanleyarn/esp/esp-idf/components/esp_http_server/include/esp_http_server.h:1743:11: note: declared here
 1743 | esp_err_t httpd_ws_send_frame(httpd_req_t *req, httpd_ws_frame_t *pkt);
      |           ^~~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/websocket.c.obj] Error 1
make[1]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [all] Error 2
